[package]
name = "presigned-url-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
futures = "0.3.30"
reqwest = { version = "0.12.2", features = ["json", "multipart", "stream"] }
serde_json = "1.0.115"
sha2 = { version = "0.10.8", features = ["sha2-asm"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
